2009-02-16  Les Harris  <lharris@gnome.org>

	* src/Makefile.am: Removed GMUD_DEBUG variable. The configure script
	should add the debug flags.
	* src/mud-connection-view.c (mud_connection_view_network_event_cb):
	No longer relies on called functions to free the processed buffer.
	* src/mud-connections.c (mud_connections_populate_iconview): Closed
	a memory leak where two GSLists were not freed.
	* src/mud-telnet-handlers.c: Added some debug info.
	* src/mud-telnet-msp.c (mud_telnet_msp_parse): Now properly frees it's
	buffer.
	* src/mud-telnet.[ch] (mud_telnet_process): Simplified how the
	function returns it's processed buffer.  Fixed a corner case where
	MCCP data would try to decompress twice.

2009-02-16  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Update for 0.11.1.

	* configure.ac: Release GNOME-Mud 0.11.1.

2009-02-15  Les Harris  <lharris@gnome.org>
	
	* ui/prefs.glade: Rehid notebook tabs in prefs dialog.
	* src/mud-telnet-mccp.c: Rearranged things a bit to
	prevent a possible memory leak.

2009-02-15  Les Harris  <lharris@gnome.org>

	* configure.ac: Reenabled Zlib check.
	* src/Makefile.am: Readded mud-telnet-mccp.[ch]
	* src/mud-telnet-mccp.[ch]: Added files which decompress a
	zlib stream.
	* src/mud-connection-view.c:
	* src/mud-telnet-handlers.[ch]:
	* src/mud-telnet.[ch]: Reenabled MCCP related code.
	* src/mud-telnet-zmp.c (ZMP_ident): Made ident use VERSION
	from config.h.
	* src/mud-window.c (mud_window_about_cb): Updated email address.
	* ui/main.glade: Removed the toolbar from the handlebox.

2009-02-14  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_init),
	(mud_connection_view_send_naws): Will now only send NAWS
	subrequests when the window size has actually changed.
	* src/mud-telnet.c (mud_telnet_register_handlers): Reenabled
	all telnet options now that telnet parsing works.

2009-02-15  Mart Raudsepp  <leio@gentoo.org>

	* src/mud-telnet.c (mud_telnet_process): Add a missing break